# MissionControl

./: Makefile  config.yaml  pyproject.toml
client/: client.py
host/: main.py  server.py  utils.py  workqueue.py
src/: client.cpp  config.h  demo.cpp  device.h  logging.h  main.cpp  sockets.h
